Criação do projeto angular, componentes, CRUD

--- a/revisao-Angular/angular.json
+++ b/revisao-Angular/angular.json
@@ -124,6 +124,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "revisao-Angular"
+    }
+  },
+  "defaultProject": "revisao-Angular",
+  "cli": {
+    "analytics": false
+  }
 }
